--- a/.classpath
+++ b/.classpath
@@ -13,7 +13,7 @@
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
-	<classpathentry kind="lib" path="C:/Users/LG/Desktop/아비/tools/javax.servlet.jsp.jstl-api-1.2.1/javax.servlet.jsp.jstl-1.2.1.jar"/>
-	<classpathentry kind="lib" path="C:/Users/LG/Desktop/아비/tools/javax.servlet.jsp.jstl-api-1.2.1/javax.servlet.jsp.jstl-api-1.2.1.jar"/>
+	<classpathentry kind="lib" path="D:/tools/apache-tomcat-9.0.0.M26/lib/jsp-api.jar"/>
+	<classpathentry kind="lib" path="D:/tools/apache-tomcat-9.0.0.M26/lib/servlet-api.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
